tests/snapshots/run_wpt_conformance__onnx_layerNormalization_float32_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "layer_normalization.https.any.js",
    "layerNormalization float32 5D tensor default options",
    "onnx",
    "PASS",
)
