tests/snapshots/run_wpt_conformance__onnx_leakyRelu_float16_1D_tensor_negative_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "leaky_relu.https.any.js",
    "leakyRelu float16 1D tensor negative options.alpha",
    "onnx",
    "PASS",
)
