tests/snapshots/run_wpt_conformance__onnx_leakyRelu_float16_5D_tensor_options_alpha_0_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "leaky_relu.https.any.js",
    "leakyRelu float16 5D tensor options.alpha=0.0",
    "onnx",
    "PASS",
)
